# norma_machine

./: pyproject.toml
src/norma_machine/: instruction.py  machine.py  macro.py  main.py  program_loader.py
src/norma_machine/macros/: clear.nm  multiply.nm  sum.nm
src/norma_machine/programs/: example.nm  example2.nm
